[package]
name = "headlines"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
eframe = "0.14.0"
serde = { version = "1.0.130", features = ["derive"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
newsapi = {path = "../newsapi"}
