[package]
name = "headlines"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = {version = "0.14.0", features = ["persistence"]}
serde = { version = "1.0.130", features = ["derive"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
newsapi = {path = "../newsapi"}

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.0"
gloo-timers = "0.2.1"
wasm-bindgen-futures = "0.4.28"