[package]
name = "headlines"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui", rev = "95ff7ec", features = ["persistence"] }
serde = { version = "1.0.136", features = ["derive"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
newsapi = {path = "../newsapi"}

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.4"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.30"
