[package]
name = "newsapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.1.1", features = ["json"] }
serde = {version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
url = "2.2.2"
reqwest = {version = "0.11.4", features = ["json"], optional = true }

[features]
async = [
    "reqwest"
]
