[package]
name = "newsapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.4.0", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
url = "2.2.2"
reqwest = { version = "0.11.10", features = ["json"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwasm = "0.5.0"

[features]
async = [
    "reqwest"
]
